clients.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: client-prod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: client-prod
spec:
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: alpine/curl
          command: [ "/bin/sh", "-c", "--" ]
          args: [ "while true; do echo \"Calling server...\"; if ! timeout 2 curl -si ledger.ledger-prod 2>/dev/null; then echo \"curl timed out\"; fi; sleep 2; done" ]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-other
  namespace: client-prod
spec:
  selector:
    matchLabels:
      app: client-other
  template:
    metadata:
      labels:
        app: client-other
    spec:
      containers:
        - name: client-other
          image: alpine/curl
          command: [ "/bin/sh", "-c", "--" ]
          args: [ "while true; do echo \"Calling server...\"; if ! timeout 2 curl -si ledger.ledger-prod 2>/dev/null; then echo \"curl timed out\"; fi; sleep 2; done" ]
