ledger.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ledger-prod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ledger
  namespace: ledger-prod
spec:
  selector:
    matchLabels:
      app: ledger
  template:
    metadata:
      labels:
        app: ledger
    spec:
      containers:
        - name: server
          image: node:19
          command: [ "/bin/sh","-c" ]
          args: [ "echo \"Hi, I am the server, you called, may I help you?\" > index.html; npx --yes http-server -p 80 " ]
---
apiVersion: v1
kind: Service
metadata:
  name: ledger
  namespace: ledger-prod
spec:
  selector:
    app: ledger
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
